#ifndef ROBOCLAW_CHANNEL_H
#define ROBOCLAW_CHANNEL_H

/**
 * @brief Represents the channels of a Roboclaw controller
 *
 */
enum class RoboclawChannel { A,
                             B };

#endif